--- a/MusicPlatform/Views/Track/Details.cshtml
+++ b/MusicPlatform/Views/Track/Details.cshtml
@@ -166,6 +166,12 @@
             margin-right: 8px;
         }
 
+    .action-btn.liked {
+        background-color: #ff5500;
+        color: #fff;
+        border-color: #ff5500;
+    }
+
     .comment-section h3 {
         margin-bottom: 20px;
     }
@@ -289,7 +295,19 @@
                 </div>
 
                 <div class="action-button-group">
-                    <a href="#" class="action-btn"><i class="fa fa-heart"></i> Like</a>
+                    <form id="like-form" method="post" class="d-inline">
+                        @Html.AntiForgeryToken()
+                    </form>
+
+                    <a href="#"
+                       class="action-btn @(Model.IsLikedByCurrentUser ? "liked" : "")"
+                       id="like-button"
+                       data-track-id="@Model.PublicId"
+                       data-like-url="/api/favorites/like/@Model.PublicId"
+                       data-unlike-url="/api/favorites/unlike/@Model.PublicId">
+                        <i class="fa fa-heart"></i>
+                        <span id="like-text">@(Model.IsLikedByCurrentUser ? "Liked" : "Like")</span>
+                    </a>
                     <a href="#" class="action-btn"><i class="fa fa-plus"></i> Add to Playlist</a>
                     <a href="#" class="action-btn"><i class="fa fa-share-square"></i> Share</a>
                 </div>
@@ -342,7 +360,7 @@
                 <h4>Track Stats</h4>
                 <div class="stats-grid">
                     <div><i class="fa fa-play"></i> @Model.Plays.ToString("N0") Plays</div>
-                    <div><i class="fa fa-heart"></i> @Model.FavoritesCount.ToString("N0") Likes</div>
+                    <div><i class="fa fa-heart"></i> <span id="like-count-display">@Model.FavoritesCount.ToString("N0")</span> Likes</div>
                     <div><i class="fa fa-calendar"></i> @Model.ReleasedDate</div>
                 </div>
             </div>
@@ -415,4 +433,5 @@
         });
     </script>
     <script src="~/js/comment-actions.js"></script>
+    <script src="~/js/like-track.js" asp-append-version="true"></script>
 }
