--- a/MusicPlatform/Views/Shared/_Layout.cshtml
+++ b/MusicPlatform/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/font-awesome.css">
     <link rel="stylesheet" href="~/css/templatemo.css">
     <link rel="stylesheet" href="~/css/owl-carousel.css">
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
 <body class="@(currentController == "Home" ? "is-homepage" : "is-subpage")">
     <!-- ***** Preloader Start ***** -->
